docs/config: restore TURNSTILE_REQUIRED (optional Turnstile) in compose, env example, and docs

--- a/infrastructure/env.example
+++ b/infrastructure/env.example
@@ -103,6 +103,8 @@ SESSION_TOKEN_SECRET=
 
 # Cloudflare Turnstile secret key (server-side). Required if site key is set.
 TURNSTILE_SECRET=
+# Set to 'false' to bypass Turnstile and allow chats without verification
+TURNSTILE_REQUIRED=false
 
 # =============================================================================
 # NGINX CONFIGURATION
