--- a/infrastructure/prod/docker-compose.prod.yml
+++ b/infrastructure/prod/docker-compose.prod.yml
@@ -96,6 +96,7 @@ services:
       - SESSION_TOKEN_SECRET=${SESSION_TOKEN_SECRET}
       - REDIS_URL=${AI_BACKEND_REDIS_URL:-redis://redis:6379/0}
       - TURNSTILE_SECRET=${TURNSTILE_SECRET}
+      - TURNSTILE_REQUIRED=${TURNSTILE_REQUIRED:-false}
       - ARACHNE_URL=${ARACHNE_URL:-http://arachne:8080}
       - ARACHNE_API_TOKEN=${ARACHNE_API_TOKEN}
       - CORS_ALLOW_ORIGIN=${CORS_ALLOW_ORIGIN:-https://${DOMAIN_NAME}}
