feat(monitoring): provision Grafana dashboards, add AI/Arachne custom dashboards; fetch script; Grafana subpath + Nginx proxy; deploy workflow starts monitoring and adds health checks; dev container names; Apple Silicon platform tweaks

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,12 +81,37 @@ jobs:
           export AI_BACKEND_IMAGE=ghcr.io/\${REPO}/ai-backend:\${SHA}
           export ARACHNE_IMAGE=ghcr.io/\${REPO}/arachne:\${SHA}
           export ARACHNE_CPU_LIMIT=1.0
+          # Ensure external prod network exists (idempotent)
+          docker network create portfolio-network-prod >/dev/null 2>&1 || true
           # Bring down current prod stack (if any) to avoid port/cpu conflicts
-          docker compose --env-file ../.env -f docker-compose.prod.yml down --remove-orphans || true
+          docker compose --env-file ../.env -f docker-compose.prod.yml -f docker-compose.monitoring.prod.yml down --remove-orphans || true
           # Cleanup any legacy containers by name (from previous compose files)
           docker ps -aq --filter name='^portfolio-.*' | xargs -r docker rm -f || true
-          # Bring up services with fresh images, remove orphans, and force recreate
-          docker compose --env-file ../.env -f docker-compose.prod.yml up -d --pull always --remove-orphans --force-recreate nginx ai-backend arachne
+          # Bring up services with fresh images, remove orphans, and force recreate (app + monitoring)
+          docker compose --env-file ../.env -f docker-compose.prod.yml -f docker-compose.monitoring.prod.yml up -d --pull always --remove-orphans --force-recreate nginx workfolio ai-backend arachne prometheus grafana node-exporter nginx-exporter redis-exporter
+
+      - name: Verify monitoring health (via SSH)
+        env:
+          HOST: ${{ secrets.PROD_HOST }}
+          USER: ${{ secrets.PROD_USER }}
+          PORT: ${{ secrets.PROD_PORT }}
+        run: |
+          ssh -i ~/.ssh/deploy_key -p "$PORT" "$USER@$HOST" bash -se << 'EOSSH'
+          set -euo pipefail
+          echo "Waiting for Prometheus and Grafana to become healthy..."
+          for i in $(seq 1 60); do
+            ok=0
+            curl -fsS -m 5 http://localhost:9090/-/healthy >/dev/null && ok=$((ok+1)) || true
+            curl -fsS -m 5 http://localhost:3000/api/health >/dev/null && ok=$((ok+1)) || true
+            if [ "$ok" -eq 2 ]; then
+              echo "Monitoring healthy."
+              exit 0
+            fi
+            sleep 5
+          done
+          echo "ERROR: Monitoring health checks failed" >&2
+          exit 1
+          EOSSH
           EOSSH
 
       - name: Verify production health
@@ -101,7 +126,9 @@ jobs:
             curl -fsS -m 5 "https://$DOMAIN/health" >/dev/null && ok=$((ok+1)) || true
             curl -fsS -m 5 "https://$DOMAIN/api/ai/health" >/dev/null && ok=$((ok+1)) || true
             curl -fsS -m 5 "https://$DOMAIN/api/arachne/health" >/dev/null && ok=$((ok+1)) || true
-            if [ "$ok" -eq 3 ]; then
+            # Grafana proxied under subpath
+            curl -fsS -m 5 "https://$DOMAIN/monitoring/grafana/api/health" >/dev/null && ok=$((ok+1)) || true
+            if [ "$ok" -eq 4 ]; then
               echo "All endpoints healthy."
               exit 0
             fi
