--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -103,6 +103,7 @@ services:
   # Redis Commander - Optional UI for Redis management
   redis-commander:
     image: rediscommander/redis-commander:latest
+    platform: linux/amd64
     container_name: portfolio-redis-commander
     environment:
       - REDIS_HOSTS=local:redis:${REDIS_PORT:-6379}
