--- a/infrastructure/monitoring/docker-compose.monitoring.yml
+++ b/infrastructure/monitoring/docker-compose.monitoring.yml
@@ -46,6 +46,9 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
+      - GF_SERVER_DOMAIN=${DOMAIN_NAME:-localhost}
+      - GF_SERVER_ROOT_URL=%(protocol)s://%(domain)s/monitoring/grafana/
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
     ports:
       - "3000:3000"
     networks:
@@ -130,6 +133,7 @@ services:
 
   redis-exporter:
     image: oliver006/redis_exporter:v1.39.0
+    platform: linux/amd64
     container_name: portfolio-redis-exporter
     command:
       - -redis.addr=redis://redis:6379
