--- a/infrastructure/nginx/conf.d/default.conf.template
+++ b/infrastructure/nginx/conf.d/default.conf.template
@@ -125,6 +125,19 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Grafana (served from subpath /monitoring/grafana/)
+    location /monitoring/grafana/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Script-Name /monitoring/grafana;
+        proxy_pass http://grafana:3000/;
+        sub_filter_once off;
+        sub_filter 'href="/"' 'href="/monitoring/grafana/"';
+        sub_filter 'src="/"' 'src="/monitoring/grafana/"';
+    }
+
     # Health check endpoint
     location = /health {
         access_log off;
