--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,6 +87,13 @@ jobs:
           docker compose --env-file ../.env -f docker-compose.prod.yml -f docker-compose.monitoring.prod.yml down --remove-orphans || true
           # Cleanup any legacy containers by name (from previous compose files)
           docker ps -aq --filter name='^portfolio-.*' | xargs -r docker rm -f || true
+          # Aggressive cleanup to free disk before pulling new images (keeps volumes)
+          echo "Before prune:"
+          docker system df || true
+          docker system prune -af || true
+          docker builder prune -af || true
+          echo "After prune:"
+          docker system df || true
           # Bring up services with fresh images, remove orphans, and force recreate (app + monitoring)
           docker compose --env-file ../.env -f docker-compose.prod.yml -f docker-compose.monitoring.prod.yml up -d --pull always --remove-orphans --force-recreate nginx workfolio ai-backend arachne prometheus grafana node-exporter nginx-exporter redis-exporter
 
