fix(nginx/exporter): mark default_server and scrape stub_status via 127.0.0.1 to avoid 404; redeploy

--- a/infrastructure/nginx/conf.d/default.conf.template
+++ b/infrastructure/nginx/conf.d/default.conf.template
@@ -1,6 +1,6 @@
 # HTTP server for ACME challenges and redirects
 server {
-    listen 80;
+    listen 80 default_server;
     server_name _;
     
     # ACME Challenge for Let's Encrypt
@@ -35,7 +35,7 @@ server {
 
 # Main portfolio application with HTTPS
 server {
-    listen 443 ssl;
+    listen 443 ssl default_server;
     http2 on;
     server_name _;
 
