--- a/infrastructure/monitoring/docker-compose.monitoring.yml
+++ b/infrastructure/monitoring/docker-compose.monitoring.yml
@@ -107,7 +107,7 @@ services:
     image: nginx/nginx-prometheus-exporter:0.10.0
     container_name: portfolio-nginx-exporter
     command:
-      - -nginx.scrape-uri=http://127.0.0.1:80/stub_status
+      - -nginx.scrape-uri=http://nginx:80/stub_status
       - -nginx.ssl-verify=false
     ports:
       - "9113:9113"
