fix(grafana subpath): enable serve_from_sub_path and proxy Grafana cleanly; relax CSP in Grafana location

--- a/infrastructure/prod/docker-compose.monitoring.prod.yml
+++ b/infrastructure/prod/docker-compose.monitoring.prod.yml
@@ -63,6 +63,7 @@ services:
       - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
       - GF_SERVER_DOMAIN=${DOMAIN_NAME:-localhost}
       - GF_SERVER_ROOT_URL=https://${DOMAIN_NAME:-localhost}/monitoring/grafana/
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
     ports:
       - "3000:3000"
     networks:
