--- a/infrastructure/nginx/conf.d/default.conf.template
+++ b/infrastructure/nginx/conf.d/default.conf.template
@@ -128,15 +128,16 @@ server {
 
     # Grafana (served from subpath /monitoring/grafana/)
     location /monitoring/grafana/ {
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Script-Name /monitoring/grafana;
         proxy_pass http://grafana:3000/;
-        sub_filter_once off;
-        sub_filter 'href="/"' 'href="/monitoring/grafana/"';
-        sub_filter 'src="/"' 'src="/monitoring/grafana/"';
+
+        # Relax CSP for Grafana only to avoid blocked assets
+        add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https: http:; img-src 'self' data: blob: https: http:; style-src 'self' 'unsafe-inline' https: http:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https: http:" always;
     }
 
     # Health check endpoint
