--- a/infrastructure/nginx/conf.d/default.conf.template
+++ b/infrastructure/nginx/conf.d/default.conf.template
@@ -127,13 +127,17 @@ server {
     }
 
     # Grafana (served from subpath /monitoring/grafana/)
+    location = /monitoring/grafana {
+        return 301 /monitoring/grafana/;
+    }
+
     location /monitoring/grafana/ {
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Script-Name /monitoring/grafana;
+        proxy_set_header X-Forwarded-Prefix /monitoring/grafana;
         proxy_pass http://grafana:3000/;
 
         # Relax CSP for Grafana only to avoid blocked assets
