--- a/infrastructure/nginx/conf.d/default.conf.template
+++ b/infrastructure/nginx/conf.d/default.conf.template
@@ -131,7 +131,7 @@ server {
         return 301 /monitoring/grafana/;
     }
 
-    location /monitoring/grafana/ {
+    location ^~ /monitoring/grafana/ {
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
