feat(grafana): enable anonymous viewer access for subpath to serve assets without redirect loops

--- a/infrastructure/prod/docker-compose.monitoring.prod.yml
+++ b/infrastructure/prod/docker-compose.monitoring.prod.yml
@@ -64,6 +64,8 @@ services:
       - GF_SERVER_DOMAIN=${DOMAIN_NAME:-localhost}
       - GF_SERVER_ROOT_URL=https://${DOMAIN_NAME:-localhost}/monitoring/grafana/
       - GF_SERVER_SERVE_FROM_SUB_PATH=true
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
     ports:
       - "3000:3000"
     networks:
