--- a/infrastructure/monitoring/docker-compose.monitoring.yml
+++ b/infrastructure/monitoring/docker-compose.monitoring.yml
@@ -49,6 +49,8 @@ services:
       - GF_SERVER_DOMAIN=${DOMAIN_NAME:-localhost}
       - GF_SERVER_ROOT_URL=%(protocol)s://%(domain)s/monitoring/grafana/
       - GF_SERVER_SERVE_FROM_SUB_PATH=true
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
     ports:
       - "3000:3000"
     networks:
