fix(nginx): use  in HTTP->HTTPS redirect to avoid https://_/ redirects

--- a/infrastructure/nginx/conf.d/default.conf.template
+++ b/infrastructure/nginx/conf.d/default.conf.template
@@ -27,9 +27,9 @@ server {
         add_header Content-Type text/plain;
     }
 
-    # Redirect all other HTTP traffic to HTTPS
+    # Redirect all other HTTP traffic to HTTPS using the original Host header
     location / {
-        return 301 https://$server_name$request_uri;
+        return 301 https://$host$request_uri;
     }
 }
 
