--- a/infrastructure/nginx/conf.d/default.conf.template
+++ b/infrastructure/nginx/conf.d/default.conf.template
@@ -148,8 +148,9 @@ server {
         proxy_buffering off;
         proxy_pass http://grafana:3000;
 
-        # Relax CSP for Grafana only to avoid blocked assets
+        # Relax CSP for Grafana only to avoid blocked assets, and remove unsupported headers
         add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https: http:; img-src 'self' data: blob: https: http:; style-src 'self' 'unsafe-inline' https: http:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https: http:; connect-src 'self' wss: https: http: data:" always;
+        add_header Permissions-Policy "" always;
     }
 
     # Health check endpoint
