--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - workfolio
       - ai-backend
       - arachne
+      - arachne-ui
     restart: unless-stopped
     networks:
       - portfolio-network
@@ -27,6 +28,25 @@ services:
     environment:
       - NODE_ENV=${WORKFOLIO_NODE_ENV:-production}
       - VITE_AI_BACKEND_URL=${VITE_AI_BACKEND_URL:-/api/ai}
+    restart: unless-stopped
+    networks:
+      - portfolio-network
+
+  # Arachne UI - SaaS for managing the scraper frontend
+  arachne-ui:
+    build:
+      context: ../services/arachne-ui
+      dockerfile: Dockerfile
+    container_name: portfolio-arachne-ui
+    environment:
+      - NODE_ENV=${ARACHNE_UI_NODE_ENV:-production}
+      - PORT=${ARACHNE_UI_PORT:-3000}
+      - AI_BACKEND_URL=${AI_BACKEND_URL:-http://ai-backend:3001}
+      - ARACHNE_API_URL=${ARACHNE_API_URL:-http://arachne:8080}
+      - NEXT_PUBLIC_ARACHNE_API_URL=${NEXT_PUBLIC_ARACHNE_API_URL:-http://arachne:8080}
+    depends_on:
+      - ai-backend
+      - arachne
     restart: unless-stopped
     networks:
       - portfolio-network
