--- a/infrastructure/nginx/conf.d/default.dev.conf
+++ b/infrastructure/nginx/conf.d/default.dev.conf
@@ -19,6 +19,18 @@ server {
         add_header Content-Type text/plain;
     }
 
+    location = /arachne {
+        return 301 /arachne/;
+    }
+
+    location ^~ /arachne/ {
+        proxy_pass http://arachne-ui:3002;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Main portfolio (Workfolio)
     location / {
         proxy_pass http://workfolio:3000;
