--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,10 @@
 	url = https://github.com/kareemsasa3/ai-backend.git
 [submodule "arachne-ui"]
 	path = arachne-ui
-	url = https://github.com/kareemsasa3/scrapee.git
+	url = https://github.com/kareemsasa3/arachne-ui.git
+[submodule "services/arachne-ui"]
+	path = services/arachne-ui
+	url = https://github.com/kareemsasa3/arachne-ui.git
+[submodule "services/workfolio"]
+	path = services/workfolio
+	url = https://github.com/kareemsasa3/workfolio.git
