--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -1,175 +1,9 @@
-# HTTP server for ACME challenges and redirects
+# Development nginx configuration
+# Routes all traffic through nginx for consistent URL structure
+
 server {
     listen 80;
     server_name _;
-    
-    # ACME Challenge for Let's Encrypt
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-        try_files $uri =404;
-    }
-    
-    # Allow stub_status access without redirect
-    location /stub_status {
-        access_log off;
-        stub_status on;
-        allow 127.0.0.1;
-        allow 172.16.0.0/12;
-        allow 192.168.0.0/16;
-        deny all;
-    }
-
-    # Health check endpoint for local container health (HTTP)
-    location = /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
-    }
-
-    # Redirect all other HTTP traffic to HTTPS
-    location / {
-        return 301 https://$server_name$request_uri;
-    }
-}
-
-# Main portfolio application with HTTPS
-server {
-    listen 443 ssl;
-    http2 on;
-    server_name _;
-
-    # SSL Configuration
-    # Certs are stored under ./nginx/ssl on host and mounted to /etc/nginx/ssl in the container
-    ssl_certificate /etc/nginx/ssl/live/kareemsasa.dev/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/kareemsasa.dev/privkey.pem;
-    
-    # SSL Security Settings
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
-    ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' https://challenges.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self'; frame-src 'self' https://challenges.cloudflare.com; frame-ancestors 'self'; base-uri 'self'; form-action 'self'" always;
-
-    # Cache policy for static assets (hashed bundles)
-    location ~* \.(?:js|css|png|jpg|jpeg|gif|ico|svg|webp|woff|woff2|ttf)$ {
-        add_header Cache-Control "public, max-age=31536000, immutable" always;
-        proxy_pass http://workfolio:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Ensure index.html is never cached
-    location = /index.html {
-        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0" always;
-        proxy_pass http://workfolio:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location = /arachne {
-        return 301 /arachne/;
-    }
-
-    location ^~ /arachne/ {
-        proxy_pass http://arachne-ui:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Main portfolio (Workfolio)
-    location / {
-        proxy_pass http://workfolio:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # AI Backend API
-    location /api/ai/ {
-        limit_req zone=api burst=20 nodelay;
-        rewrite ^/api/ai(/.*)$ $1 break;
-        proxy_pass http://ai-backend:3001;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # CORS headers (same-origin by default)
-        add_header Access-Control-Allow-Origin $scheme://$host always;
-        add_header Vary Origin always;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
-        
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin $scheme://$host;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-            add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
-            add_header Access-Control-Max-Age 1728000;
-            add_header Content-Type 'text/plain; charset=utf-8';
-            add_header Content-Length 0;
-            return 204;
-        }
-    }
-
-    # Arachne scraping API
-    location /api/scrape/ {
-        limit_req zone=scraper burst=10 nodelay;
-        rewrite ^/api/scrape(/.*)$ $1 break;
-        proxy_pass http://arachne:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # CORS headers (same-origin by default)
-        add_header Access-Control-Allow-Origin $scheme://$host always;
-        add_header Vary Origin always;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
-        
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin $scheme://$host;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-            add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
-            add_header Access-Control-Max-Age 1728000;
-            add_header Content-Type 'text/plain; charset=utf-8';
-            add_header Content-Length 0;
-            return 204;
-        }
-    }
-
-    # Arachne health and metrics
-    location /api/arachne/ {
-        proxy_pass http://arachne:8080/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Redis Commander (optional management UI)
-    # location /redis/ {
-    #     proxy_pass http://redis-commander:8081/;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    # }
 
     # Health check endpoint
     location = /health {
@@ -178,9 +12,73 @@ server {
         add_header Content-Type text/plain;
     }
 
-    # Error pages
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+    # Arachne UI - Next.js app with basePath=/arachne (port 3002 in dev)
+    # Handle both /arachne and /arachne/ - Next.js will handle the routing
+    location ^~ /arachne {
+        proxy_pass http://arachne-ui:3002;
+        proxy_http_version 1.1;
+        
+        # WebSocket support for Next.js HMR
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Disable buffering for streaming/HMR
+        proxy_buffering off;
+        proxy_cache off;
     }
-} 
+
+    # AI Backend API (strips /api/ai prefix)
+    location /api/ai/ {
+        rewrite ^/api/ai(/.*)$ $1 break;
+        proxy_pass http://ai-backend:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Arachne scraping API (strips /api/scrape prefix)
+    location /api/scrape/ {
+        rewrite ^/api/scrape(/.*)$ $1 break;
+        proxy_pass http://arachne:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Arachne backend API passthrough (health, metrics, memory endpoints)
+    location /api/arachne/ {
+        proxy_pass http://arachne:8080/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Main portfolio (Workfolio) - Vite dev server on port 3000
+    location / {
+        proxy_pass http://workfolio:3000;
+        proxy_http_version 1.1;
+        
+        # WebSocket support for Vite HMR
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Disable buffering for HMR
+        proxy_buffering off;
+    }
+}
