--- a/infrastructure/dev/docker-compose.dev.yml
+++ b/infrastructure/dev/docker-compose.dev.yml
@@ -1,110 +1,113 @@
+# Development Docker Compose
+# Usage: docker compose -f docker-compose.yml -f dev/docker-compose.dev.yml up --build
+#
+# Run from: infrastructure/
+#
+# PREREQUISITE: Run `npm install` on the host for each JS service BEFORE starting.
+# The containers bind-mount your host code directly, including node_modules.
+
 services:
-  # AI Backend - Development mode with live reloading
+  # AI Backend - Node.js with nodemon hot reload
   ai-backend:
     container_name: portfolio-ai-backend-dev
     build:
       context: ../services/ai-backend
       dockerfile: Dockerfile.dev
     environment:
-      - NODE_ENV=${DEV_NODE_ENV:-development}
-      - PORT=${DEV_AI_BACKEND_PORT:-3001}
+      - NODE_ENV=development
+      - PORT=3001
       - GEMINI_API_KEY=${GEMINI_API_KEY}
-      - ARACHNE_URL=${ARACHNE_URL:-http://arachne:8080}
+      - ARACHNE_URL=http://arachne:8080
       - ARACHNE_API_TOKEN=${ARACHNE_API_TOKEN:-}
       - PROFILE_CONTEXT_PATH=/app/profile/profile.md
     volumes:
-      - ../services/ai-backend:/app
+      - ../services/ai-backend:/app:rw
       - ../profile/profile.md:/app/profile/profile.md:ro
-      - /app/node_modules
     command: npm run dev
     ports:
-      - "${DEV_AI_BACKEND_PORT:-3001}:${DEV_AI_BACKEND_PORT:-3001}"
+      - "3001:3001"
 
-  # Workfolio - Development mode with live reloading
+  # Workfolio - Vite dev server with HMR
   workfolio:
     container_name: portfolio-workfolio-dev
     build:
       context: ../services/workfolio
       dockerfile: Dockerfile.dev
     environment:
-      - NODE_ENV=${DEV_NODE_ENV:-development}
+      - NODE_ENV=development
       - VITE_AI_BACKEND_URL=/api/ai
+      - VITE_HMR_CLIENT_PORT=80
     volumes:
-      - ../services/workfolio:/app
-      - /app/node_modules
-    command: npm run dev -- --host --no-open
+      - ../services/workfolio:/app:rw
+    command: npm run dev -- --host
     ports:
-      - "${DEV_WORKFOLIO_PORT:-3000}:${DEV_WORKFOLIO_PORT:-3000}"
+      - "3000:3000"
 
-  # Arachne - Development mode with live reloading
+  # Arachne - Go with Air hot reload
   arachne:
     container_name: portfolio-arachne-dev
     build:
       context: ../services/arachne
       dockerfile: ../../infrastructure/dev/arachne.Dockerfile
     environment:
-      - SCRAPER_REDIS_ADDR=${ARACHNE_REDIS_ADDR:-redis:6379}
-      - SCRAPER_REDIS_DB=${ARACHNE_REDIS_DB:-0}
-      - SCRAPER_ENABLE_METRICS=${ARACHNE_ENABLE_METRICS:-true}
-      - SCRAPER_ENABLE_LOGGING=${ARACHNE_ENABLE_LOGGING:-true}
-      - SCRAPER_LOG_LEVEL=${ARACHNE_DEV_LOG_LEVEL:-debug}
-      - SCRAPER_MAX_CONCURRENT=${ARACHNE_DEV_MAX_CONCURRENT:-3}
-      - SCRAPER_REQUEST_TIMEOUT=${ARACHNE_DEV_REQUEST_TIMEOUT:-40s}
-      - SCRAPER_TOTAL_TIMEOUT=${ARACHNE_DEV_TOTAL_TIMEOUT:-60s}
-      - SCRAPER_USE_HEADLESS=${ARACHNE_USE_HEADLESS:-true}
-      - SCRAPER_MAX_CONTENT_BYTES=${ARACHNE_DEV_MAX_CONTENT_BYTES:-200000}
-      - SCRAPER_HEADLESS_NO_SANDBOX=${ARACHNE_DEV_HEADLESS_NO_SANDBOX:-true}
+      - SCRAPER_REDIS_ADDR=redis:6379
+      - SCRAPER_REDIS_DB=0
+      - SCRAPER_ENABLE_METRICS=true
+      - SCRAPER_ENABLE_LOGGING=true
+      - SCRAPER_LOG_LEVEL=debug
+      - SCRAPER_MAX_CONCURRENT=3
+      - SCRAPER_REQUEST_TIMEOUT=40s
+      - SCRAPER_TOTAL_TIMEOUT=60s
+      - SCRAPER_USE_HEADLESS=true
+      - SCRAPER_MAX_CONTENT_BYTES=200000
+      - SCRAPER_HEADLESS_NO_SANDBOX=true
     volumes:
-      - ../services/arachne:/app
-      - ../infrastructure/dev/arachne.air.toml:/etc/air/air.toml:ro
+      - ../services/arachne:/app:rw
+      # Path relative to CWD (infrastructure/), not to this file
+      - ./dev/arachne.air.toml:/etc/air/air.toml:ro
     command: air -c /etc/air/air.toml
-    # Increase shared memory for Chromium when using --no-sandbox
     shm_size: "1gb"
     ports:
-      - "${DEV_ARACHNE_PORT:-8080}:${DEV_ARACHNE_PORT:-8080}"
+      - "8080:8080"
 
-  # Arachne UI - Development server for the scraper dashboard
+  # Arachne UI - Next.js dev server with Turbopack
   arachne-ui:
     container_name: portfolio-arachne-ui-dev
     build:
       context: ../services/arachne-ui
       dockerfile: Dockerfile.dev
     environment:
-      - NODE_ENV=${DEV_NODE_ENV:-development}
-      - PORT=${DEV_ARACHNE_UI_PORT:-3002}
-      - AI_BACKEND_URL=${AI_BACKEND_URL:-http://ai-backend:3001}
-      - ARACHNE_API_URL=${ARACHNE_API_URL:-http://arachne:8080}
-      - NEXT_PUBLIC_ARACHNE_API_URL=${NEXT_PUBLIC_ARACHNE_API_URL:-http://arachne:8080}
+      - NODE_ENV=development
+      - PORT=3002
+      # Server-side URLs (internal Docker network)
+      - AI_BACKEND_URL=http://ai-backend:3001
+      - ARACHNE_API_URL=http://arachne:8080
+      # Client-side URL (browser goes through nginx)
+      - NEXT_PUBLIC_ARACHNE_API_URL=/api/arachne
     volumes:
-      - ../services/arachne-ui:/app
-      - /app/node_modules
-    command: npm run dev -- --hostname 0.0.0.0 --port ${DEV_ARACHNE_UI_PORT:-3002}
+      - ../services/arachne-ui:/app:rw
+    command: npm run dev -- --hostname 0.0.0.0 --port 3002
     depends_on:
       - ai-backend
       - arachne
-    restart: unless-stopped
     ports:
-      - "${DEV_ARACHNE_UI_PORT:-3002}:${DEV_ARACHNE_UI_PORT:-3002}"
+      - "3002:3002"
 
-  # Disable redis-commander in dev by default (profile-only)
+  # Redis Commander - disabled by default, enable with --profile monitoring
   redis-commander:
     profiles: ["monitoring"]
 
-  # Nginx - Always running in development mode
+  # Nginx - reverse proxy for all services
   nginx:
     container_name: portfolio-nginx-dev
-    image: nginx:alpine
     volumes:
+      # Paths relative to CWD (infrastructure/), not to this file
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d/default.dev.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
-      - "${NGINX_HTTP_PORT:-80}:80"
+      - "80:80"
     depends_on:
       - workfolio
       - ai-backend
       - arachne
       - arachne-ui
-    command:
-      - /bin/sh
-      - -c
-      - ": > /tmp/default.conf && nginx -g 'daemon off;'"
